Fix scrollbar issue

--- a/renderer/PageShell.css
+++ b/renderer/PageShell.css
@@ -4,7 +4,6 @@ html, body, #preact-root {
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100vw;
   color: #ffffff;
   background-color: #000000;
 }
